@@ -1,4 +1,9 @@
 4.8.2:
+  * Support for "DB_OVERWRITE_DUP" flag.
+  * Support for "DB_FOREIGN_ABORT", "DB_FOREIGN_CASCADE",
+    "DB_FOREIGN_NULLIFY" flags.
+  * Support for "DB_FOREIGN_CONFLICT" exception.
+  * Support for "DB_ENV->memp_trickle()".
 
 4.8.1:
   * Support for "DB_ENV->mutex_set_align()" and
